--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,39 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:100,400,700);
 @import url(http://fonts.googleapis.com/css?family=Roboto+Slab);
 /*#de0b28*/
+/*************************************************
+		CUSTOME CSS
+*************************************************/
+#map_canvas{ 
+	width: 100%; 
+	height: 70%;
+	position:absolute; 
+	top: 0; 
+	left: 0; 
+	z-index: 0; 
+	opacity: .8;
+}
+#searchForm { 
+	position: relative; 
+	z-index: 1;
+	margin-top: 10%;
+	
+	background-color: rgba(0,0,0,.7);
+	padding-bottom: 1%;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;				
+}
+.intro{
+	margin-bottom: 10%;
+}
+.firstHeading{
+	color:#33CC99;
+}
+.siteNotice{				
+	border-color:#33CC99 !important;
+	background-color: rgba(0,0,0,.7);
+}
 body
 {
 	font-family: 'Roboto', 'Open-Sans', sans-serif;
