--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,19 @@
 /*************************************************
 		CUSTOME CSS
 *************************************************/
+.results tr[visible='false'],
+.no-result{
+  display:none;
+}
+
+.results tr[visible='true']{
+  display:table-row;
+}
+
+.counter{
+  padding:8px; 
+  color:#ccc;
+}
 #map_canvas{ 
 	width: 100%; 
 	height: 70%;
