--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,7 +11,13 @@
 .no-result{
   display:none;
 }
+.reviewstable{
+	border-style: solid;
+	border-width: 1px;
+	border-color: #33CC99;
+	background-color:rgba(0,0,0,.7);
 
+}
 .results tr[visible='true']{
   display:table-row;
 }
